2006-02-12  Marius Vollmer  <mvo@zagadka.de>

	* unif.c (scm_dimensions_to_uniform_array): Use the prototype for
	filling when the fill parameter is omitted, as documented, but
	turn #\nul into 0 since s8 arrays (signified by a #\nul prototype)
	can not store characters.

2006-02-09  Neil Jerram  <neil@ossau.uklinux.net>

	* socket.c (scm_c_make_socket_address): Pass address_size pointer
	on to scm_fill_sockaddr call.

2006-02-04  Neil Jerram  <neil@ossau.uklinux.net>

	* throw.h (scm_c_catch, scm_c_with_throw_handler,
	scm_catch_with_pre_unwind_handler, scm_with_throw_handler): New.

	* throw.c (SCM_JBPREUNWIND, SCM_SETJBPREUNWIND): New.
	(struct pre_unwind_data): New, replaces struct lazy_catch.
	(scm_c_catch): New, replaces scm_internal_catch as the primary
	catch API for C code; adds pre-unwind handler support.
	(scm_internal_catch): Now just a wrapper for scm_c_catch, for back
	compatibility.
	(tc16_pre_unwind_data, pre_unwind_data_print,
	make_pre_unwind_data, SCM_PRE_UNWIND_DATA_P): Renamed from
	"lazy_catch" equivalents.
	(scm_c_with_throw_handler): New, replaces scm_internal_lazy_catch
	as the primary C API for a "lazy" catch.
	(scm_internal_lazy_catch): Now just a wrapper for
	scm_c_with_throw_handler, for back compatibility.
	(scm_catch_with_pre_unwind_handler): Renamed from scm_catch; adds
	pre-unwind handler support.
	(scm_catch): Now just a wrapper for
	scm_catch_with_pre_unwind_handler, for back compatibility.
	(scm_with_throw_handler): New.
	(scm_lazy_catch): Update comment to say that the handler can
	return, and what happens if it does.
	(toggle_pre_unwind_running): New.
	(scm_ithrow): When identifying the throw target, take running
	flags into account.  In general, change naming of things from
	"lazy_catch" to "pre_unwind".  When throwing to a throw handler,
	don't unwind the dynamic context first.  Add dynwind framing to
	manage the running flag of a throw handler.  If a lazy catch or